fix h1 cliquable when not visible

--- a/src/global.scss
+++ b/src/global.scss
@@ -54,7 +54,7 @@ span {
 }
 
 .logo {
-  transition: opacity 300ms;
+  transition: all 0.3s ease-out;
   position: fixed;
   left: 0;
   top: 0;
